syntax = "proto3";

package v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

service RequestVoteService {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
}

message RequestVoteRequest {
  uint64 term = 1;
  uint64 candidateId = 2;
  uint64 lastLogIndex = 3;
  uint64 lastLogTerm = 4;
}

message RequestVoteResponse {
  bool voteGranted = 1;
  uint64 term = 2;
}